--- a/TheGymApplication/FacilitySchedulePage.xaml
+++ b/TheGymApplication/FacilitySchedulePage.xaml
@@ -15,7 +15,7 @@
         </Grid.RowDefinitions>
         <Image Source="logo.png" HeightRequest="150" VerticalOptions="Center" HorizontalOptions="Center"/>
 
-        <Label Grid.Row="1" Text="Contact a Staff member for Bookings" HorizontalOptions="Center" VerticalOptions="Center"></Label>
+        <Label Grid.Row="1" Text="Contact a Staff member for Bookings" HorizontalOptions="Center" VerticalOptions="Center" TextColor="Black"></Label>
 
         <Frame BackgroundColor="White" Margin="0,20,0,0" Grid.Row="2" CornerRadius="5" MaximumWidthRequest="500">
             <Grid>
@@ -28,20 +28,20 @@
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Label Text="Gym 1:" FontSize="Medium" HorizontalOptions="Center" Grid.Column="1"/>
+                <Label Text="Gym 1:" FontSize="Medium" HorizontalOptions="Center" Grid.Column="1" TextColor="Black"/>
                 <ScrollView Grid.Row="1" Grid.Column="1">
                     <StackLayout>
-                        <Label Text="Basketball" HorizontalOptions="Center"></Label>
-                        <Label Text="6:00AM - 1:00PM" HorizontalOptions="Center"></Label>
+                        <Label Text="Basketball" HorizontalOptions="Center" TextColor="Black"></Label>
+                        <Label Text="6:00AM - 1:00PM" HorizontalOptions="Center" TextColor="Black"></Label>
 
-                        <Label Text="Badminton" HorizontalOptions="Center"></Label>
-                        <Label Text="1:00PM - 6:00PM" HorizontalOptions="Center"></Label>
+                        <Label Text="Badminton" HorizontalOptions="Center" TextColor="Black"></Label>
+                        <Label Text="1:00PM - 6:00PM" HorizontalOptions="Center" TextColor="Black"></Label>
 
-                        <Label Text="Mens AA Volleyball League" HorizontalOptions="Center"></Label>
-                        <Label Text="6:00PM - 9:30PM" HorizontalOptions="Center"></Label>
+                        <Label Text="Mens AA Volleyball League" HorizontalOptions="Center" TextColor="Black"></Label>
+                        <Label Text="6:00PM - 9:30PM" HorizontalOptions="Center" TextColor="Black"></Label>
 
-                        <Label Text="Basketball" HorizontalOptions="Center"></Label>
-                        <Label Text="9:30PM - 11:00PM" HorizontalOptions="Center"></Label>
+                        <Label Text="Basketball" HorizontalOptions="Center" TextColor="Black"></Label>
+                        <Label Text="9:30PM - 11:00PM" HorizontalOptions="Center" TextColor="Black"></Label>
                     </StackLayout>
                 </ScrollView>
 
@@ -59,17 +59,17 @@
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Label Text="Gym 2:" FontSize="Medium" HorizontalOptions="Center" Grid.Column="1"/>
+                <Label Text="Gym 2:" FontSize="Medium" HorizontalOptions="Center" Grid.Column="1" TextColor="Black"/>
                 <ScrollView Grid.Row="1" Grid.Column="1">
                     <StackLayout>
-                        <Label Text="Basketball" HorizontalOptions="Center"></Label>
-                        <Label Text="6:00AM - 4:00PM" HorizontalOptions="Center"></Label>
+                        <Label Text="Basketball" HorizontalOptions="Center" TextColor="Black"></Label>
+                        <Label Text="6:00AM - 4:00PM" HorizontalOptions="Center" TextColor="Black"></Label>
 
-                        <Label Text="Closed" HorizontalOptions="Center"></Label>
-                        <Label Text="4:00PM - 6:00PM" HorizontalOptions="Center"></Label>
+                        <Label Text="Closed" HorizontalOptions="Center" TextColor="Black"></Label>
+                        <Label Text="4:00PM - 6:00PM" HorizontalOptions="Center" TextColor="Black"></Label>
 
-                        <Label Text="Mens AA Volleyball League" HorizontalOptions="Center"></Label>
-                        <Label Text="6:00PM - 11:00PM" HorizontalOptions="Center"></Label>
+                        <Label Text="Mens AA Volleyball League" HorizontalOptions="Center" TextColor="Black"></Label>
+                        <Label Text="6:00PM - 11:00PM" HorizontalOptions="Center" TextColor="Black"></Label>
                     </StackLayout>
                 </ScrollView>
             </Grid>
@@ -86,17 +86,17 @@
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Label Text="Gym 3:" FontSize="Medium" HorizontalOptions="Center" Grid.Column="1"/>
+                <Label Text="Gym 3:" FontSize="Medium" HorizontalOptions="Center" Grid.Column="1" TextColor="Black"/>
                 <ScrollView Grid.Row="1" Grid.Column="1">
                     <StackLayout>
-                        <Label Text="Soccer" HorizontalOptions="Center"></Label>
-                        <Label Text="6:00AM - 4:00PM" HorizontalOptions="Center"></Label>
+                        <Label Text="Soccer" HorizontalOptions="Center" TextColor="Black"></Label>
+                        <Label Text="6:00AM - 4:00PM" HorizontalOptions="Center" TextColor="Black"></Label>
 
-                        <Label Text="Closed" HorizontalOptions="Center"></Label>
-                        <Label Text="4:00PM - 6:00PM" HorizontalOptions="Center"></Label>
+                        <Label Text="Closed" HorizontalOptions="Center" TextColor="Black"></Label>
+                        <Label Text="4:00PM - 6:00PM" HorizontalOptions="Center" TextColor="Black"></Label>
 
-                        <Label Text="Mens AA Volleyball League" HorizontalOptions="Center"></Label>
-                        <Label Text="6:00PM - 11:00PM" HorizontalOptions="Center"></Label>
+                        <Label Text="Mens AA Volleyball League" HorizontalOptions="Center" TextColor="Black"></Label>
+                        <Label Text="6:00PM - 11:00PM" HorizontalOptions="Center" TextColor="Black"></Label>
                     </StackLayout>
                 </ScrollView>
             </Grid>
