--- a/TheGymApplication/MainPage.xaml
+++ b/TheGymApplication/MainPage.xaml
@@ -14,39 +14,39 @@
         <Image Source="logo.png" HeightRequest="150" VerticalOptions="Center" HorizontalOptions="Center"/>
 
         <StackLayout Margin="0,20,0,0" Grid.Row="1" HorizontalOptions="Center">
-            <Label Text="Welcome back!" FontSize="Large" FontAttributes="Bold"/>
-            <Label Text="{Binding Username}" FontSize="Medium" FontAttributes="Italic"/>
+            <Label Text="Welcome back!" FontSize="Large" FontAttributes="Bold" TextColor="Black"/>
+            <Label Text="{Binding Username}" FontSize="Medium" FontAttributes="Italic" TextColor="Black"/>
         </StackLayout>
 
         <Frame BackgroundColor="White" Margin="0,20,0,0" Grid.Row="2" CornerRadius="5" MaximumWidthRequest="500">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Label Text="Visit Count:" FontSize="Medium" HorizontalOptions="Center" Grid.Column="1"/>
-                <Label Text="{Binding VisitCount}" FontSize="Large" FontAttributes="Bold" HorizontalOptions="Center" Grid.Column="1" Grid.Row="1"/>
+                <Label Text="Visit Count:" FontSize="Medium" HorizontalOptions="Center" Grid.Column="1" TextColor="Black"/>
+                <Label Text="{Binding VisitCount}" FontSize="Large" FontAttributes="Bold" HorizontalOptions="Center" Grid.Column="1" Grid.Row="1" TextColor="Black"/>
             </Grid>
         </Frame>
 
         <Frame BackgroundColor="White" Margin="0,20,0,0" Grid.Row="3" CornerRadius="5" MaximumWidthRequest="500">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Label Text="Visit Count:" FontSize="Medium" HorizontalOptions="Center" Grid.Column="1"/>
-                <Label Text="{Binding VisitCount}" FontSize="Large" FontAttributes="Bold" HorizontalOptions="Center" Grid.Column="1" Grid.Row="1"/>
+                <Label Text="Visit Count:" FontSize="Medium" HorizontalOptions="Center" Grid.Column="1" TextColor="Black"/>
+                <Label Text="{Binding VisitCount}" FontSize="Large" FontAttributes="Bold" HorizontalOptions="Center" Grid.Column="1" Grid.Row="1" TextColor="Black"/>
             </Grid>
         </Frame>
     </Grid>
