feat: Recommit due to error in push

--- a/TheGymApplication/UI/LoginPage.xaml
+++ b/TheGymApplication/UI/LoginPage.xaml
@@ -41,5 +41,8 @@
                 Grid.Row="3"
                 BackgroundColor="Black"
                 Clicked="OnLoginButtonClicked"/>
+        <Label Text="Incorrect Username/Password." 
+               IsVisible="{Binding IncorrectPasswordUser}" 
+               TextColor="Red"/>
     </VerticalStackLayout>
 </ContentPage>
