Updated trainer cs and mainpage

--- a/TheGymApplication/UI/TrainerBookingPage.xaml
+++ b/TheGymApplication/UI/TrainerBookingPage.xaml
@@ -24,9 +24,10 @@
                     </Grid.ColumnDefinitions>
                     <Image Source="trainer1.jpg" HeightRequest="150" WidthRequest="150" Grid.RowSpan="3"/>
                     <Label Text="Keith John" FontSize="Large" FontAttributes="Bold" Grid.Row="0" Grid.Column="1" TextColor="Black"/>
-                    <Label Text="Description 1" FontSize="Medium" Grid.Row="1" Grid.Column="1" TextColor="Black"/>
-                    <Label Text="Trainer" FontSize="Medium" Grid.Row="2" Grid.Column="1" TextColor="Black"/>
-                    <Button Text="Book" BackgroundColor="Black" Grid.Row="1" Grid.Column="2"></Button>
+                    <Label Text=" Specialty:Trainer" FontSize="Medium" Grid.Row="1" Grid.Column="1" TextColor="Black"/>
+                    <Label Text="Monday 2-5 pm" FontSize="Medium" Grid.Row="2" Grid.Column="1" TextColor="Black"/>
+                    <Button Text="Book" BackgroundColor="Black" Grid.Row="1" Grid.Column="2" Clicked="TrainerClicked1" ></Button>
+                    
                 </Grid>
             </Frame>
 
@@ -44,8 +45,8 @@
                     </Grid.ColumnDefinitions>
                     <Image Source="trainer2.jpg" HeightRequest="150" WidthRequest="150" Grid.RowSpan="3"/>
                     <Label Text="Barry Owens" FontSize="Large" FontAttributes="Bold" Grid.Row="0" Grid.Column="1" TextColor="Black"/>
-                    <Label Text="Trainer" FontSize="Medium" Grid.Row="1" Grid.Column="1" TextColor="Black"/>
-                    <Label Text="Details 2" FontSize="Medium" Grid.Row="2" Grid.Column="1" TextColor="Black"/>
+                    <Label Text=" Specialty:Trainer" FontSize="Medium" Grid.Row="1" Grid.Column="1" TextColor="Black"/>
+                    <Label Text="Wednesday 10-6 pm" FontSize="Medium" Grid.Row="2" Grid.Column="1" TextColor="Black"/>
                     <Button Text="Book" BackgroundColor="Black" Grid.Row="1" Grid.Column="2"></Button>
                 </Grid>
             </Frame>
@@ -64,8 +65,8 @@
                     </Grid.ColumnDefinitions>
                     <Image Source="trainer3.jpg" HeightRequest="150" WidthRequest="150" Grid.RowSpan="3"/>
                     <Label Text="Reese Penny" FontSize="Large" FontAttributes="Bold" Grid.Row="0" Grid.Column="1" TextColor="Black"/>
-                    <Label Text="Trainer / Masseur" FontSize="Medium" Grid.Row="1" Grid.Column="1" TextColor="Black"/>
-                    <Label Text="Details 3" FontSize="Medium" Grid.Row="2" Grid.Column="1" TextColor="Black"/>
+                    <Label Text=" Specialty:Trainer / Masseur" FontSize="Medium" Grid.Row="1" Grid.Column="1" TextColor="Black"/>
+                    <Label Text="Tuesday 10-3 pm" FontSize="Medium" Grid.Row="2" Grid.Column="1" TextColor="Black"/>
                     <Button Text="Book" BackgroundColor="Black" Grid.Row="1" Grid.Column="2"></Button>
                 </Grid>
             </Frame>
@@ -84,8 +85,8 @@
                     </Grid.ColumnDefinitions>
                     <Image Source="trainer4.jpg" HeightRequest="150" WidthRequest="150" Grid.RowSpan="3"/>
                     <Label Text="Chad Bulwark" FontSize="Large" FontAttributes="Bold" Grid.Row="0" Grid.Column="1" TextColor="Black"/>
-                    <Label Text="Trainer / Masseur" FontSize="Medium" Grid.Row="1" Grid.Column="1" TextColor="Black"/>
-                    <Label Text="Details 3" FontSize="Medium" Grid.Row="2" Grid.Column="1" TextColor="Black"/>
+                    <Label Text="Specialty: Trainer / Masseur" FontSize="Medium" Grid.Row="1" Grid.Column="1" TextColor="Black"/>
+                    <Label Text="Friday 7-2 pm" FontSize="Medium" Grid.Row="2" Grid.Column="1" TextColor="Black"/>
                     <Button Text="Book" BackgroundColor="Black" Grid.Row="1" Grid.Column="2"></Button>
                 </Grid>
             </Frame>
