--- a/TheGymApplication/UI/MainPage.xaml
+++ b/TheGymApplication/UI/MainPage.xaml
@@ -30,7 +30,7 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <Label Text="Upcoming Schedule:" FontSize="Medium" HorizontalOptions="Center" Grid.Column="1" TextColor="Black"/>
-                <Label Text="{Binding FirstName}" FontSize="Large" FontAttributes="Bold" HorizontalOptions="Center" Grid.Column="1" Grid.Row="1" TextColor="Black"/>
+                <Label Text="{Binding BookingInfo}" FontSize="Large" FontAttributes="Bold" HorizontalOptions="Center" Grid.Column="1" Grid.Row="1" TextColor="Black"/>
             </Grid>
         </Frame>
 
