feat: added update button to show list of bookings, and clear bookings function. Text all black as well

--- a/TheGymApplication/UI/MainPage.xaml
+++ b/TheGymApplication/UI/MainPage.xaml
@@ -1,5 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+﻿<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TheGymApplication.MainPage"
              BackgroundImageSource="background.jpg">
@@ -8,47 +7,28 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="50"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Image Source="logo.png" HeightRequest="150" VerticalOptions="Center" HorizontalOptions="Center"/>
 
-        <StackLayout Margin="0,20,0,0" Grid.Row="1" HorizontalOptions="Center">
+        <StackLayout  Grid.Row="1" HorizontalOptions="Center">
             <Label Text="Welcome back!" FontSize="Large" FontAttributes="Bold" TextColor="Black"/>
             <Label Text="{Binding Username}" FontSize="Medium" FontAttributes="Italic" TextColor="Black"/>
         </StackLayout>
 
-        <Frame BackgroundColor="White" Margin="0,20,0,0" Grid.Row="2" CornerRadius="5" MaximumWidthRequest="500">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Label Text="Upcoming Schedule:" FontSize="Medium" HorizontalOptions="Center" Grid.Column="1" TextColor="Black"/>
-                <Label Text="{Binding BookingInfo}" FontSize="Large" FontAttributes="Bold" HorizontalOptions="Center" Grid.Column="1" Grid.Row="1" TextColor="Black"/>
-            </Grid>
-        </Frame>
+        <Button Text="Update" Grid.Row="2" HorizontalOptions="Center" Clicked="updateBookingsList"></Button>
 
-        <Frame BackgroundColor="White" Margin="0,20,0,0" Grid.Row="3" CornerRadius="5" MaximumWidthRequest="500">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Label Text="Visit Count:" FontSize="Medium" HorizontalOptions="Center" Grid.Column="1" TextColor="Black"/>
-                <Label Text="{Binding VisitCount}" FontSize="Large" FontAttributes="Bold" HorizontalOptions="Center" Grid.Column="1" Grid.Row="1" TextColor="Black"/>
-            </Grid>
-        </Frame>
+        <StackLayout HorizontalOptions="Center" Grid.Row="3" VerticalOptions="Center" x:Name="stackLayout" MinimumHeightRequest="125" MinimumWidthRequest="500" BackgroundColor="White">
+         
+        </StackLayout>
+
+
+        <StackLayout HorizontalOptions="Center" Grid.Row="4" VerticalOptions="Center" MinimumWidthRequest="500" BackgroundColor="White" MinimumHeightRequest="125">
+            <Label Text="Visit Count:" FontSize="Medium" HorizontalOptions="Center" Grid.Column="1" TextColor="Black"/>
+            <Label Text="{Binding VisitCount}" FontSize="Large" FontAttributes="Bold" HorizontalOptions="Center" Grid.Column="1" Grid.Row="1" TextColor="Black"/>
+        </StackLayout>
     </Grid>
 
 </ContentPage>
