--- a/TheGymApplication/UI/LoginPage.xaml
+++ b/TheGymApplication/UI/LoginPage.xaml
@@ -22,7 +22,8 @@
                Background="White"
                WidthRequest="150"
                HorizontalTextAlignment="Center"
-               x:Name="UsernameEntry"/>
+               x:Name="UsernameEntry"
+               TextColor="Black"/>
         <Entry Placeholder="Password" 
                HorizontalOptions="Center" 
                VerticalOptions="Center" 
@@ -32,7 +33,8 @@
                Background="White"
                WidthRequest="150"
                HorizontalTextAlignment="Center"
-               x:Name="PasswordEntry"/>
+               x:Name="PasswordEntry"
+               TextColor="Black"/>
         <Button x:Name= "Login" 
                 Text="Login" 
                 HorizontalOptions="Center" 
@@ -41,8 +43,6 @@
                 Grid.Row="3"
                 BackgroundColor="Black"
                 Clicked="OnLoginButtonClicked"/>
-        <Label Text="Incorrect Username/Password." 
-               IsVisible="{Binding IncorrectPasswordUser}" 
-               TextColor="Red"/>
+  
     </VerticalStackLayout>
 </ContentPage>
